--- a/business/templates/creditrepairaffiliate.html
+++ b/business/templates/creditrepairaffiliate.html
@@ -14,13 +14,12 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://www.creditfirm.net/wp-content/uploads/2012/06/CreditFirm-Logo-300x182.jpg"
-                             height="200px" width="100%" alt="">
+                        <img src="{{ dynamic.credit_repair_service_image }}" height="200px" width="100%" alt="">
                         <br><br>
-                        <h5 class="card-title">Click The Button Below To Have One On One Credit Repair</h5>
-                        <h5 class="card-title">Start Fixing Your Credit For As Low As $49.99 Per Month </h5>
-                        <a class="btn btn-primary" href="https://shareasale.com/r.cfm?b=520260&u=2228198&m=49614&urllink=&afftrack=" target="_blank">Click
-                            Here To Get Your Free Consultation</a>
+                        <h5 class="card-title" style="white-space: pre;">{{ dynamic.credit_repair_service_text }}</h5>
+                        <a class="btn btn-primary" href="{{ dynamic.credit_repair_consultation_link }}" target="_blank">
+                            {{ dynamic.credit_repair_service_button_text }}
+                        </a>
                     </div>
                 </div>
             </div>
