--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -77,20 +77,7 @@
                                 <div class="bar bar-left"></div>
                             </div>
                             <h2 class="title">Who are we?</h2>
-                            {% if dynamic %}
-                                <p>{{ dynamic.title }} offers a wide range of services. Which include getting clients
-                                    loans, building business credit, $1,500 in free marketing, business credit course,
-                                    {% if dynamic.show_credit_repair_plan %} credit repair course, {% endif %} autodialer, website builder and much more. Our business
-                                    builder program helps you with each step of the business credit building
-                                    process.</p>
-                                {#                                <p>{{ dynamic.title }} offers a wide range of products which includes our business#}
-                                {#                                    builder program, business funding program, and 0% business credit card program. Our#}
-                                {#                                    business builder program helps you with each step of the business credit building#}
-                                {#                                    process. Our business funding program helps you get all the funding you can qualify#}
-                                {#                                    for, we do not charge a fee to help you acquire funding. Our 0% business credit card#}
-                                {#                                    program helps you obtain 0% business credit cards for up to 18 months. Sign up for#}
-                                {#                                    the program that best fits your business needs.</p>#}
-                            {% endif %}
+                                <p>{{ dynamic.aboutus_text }}</p>
                             <a href="/pricing" class="btn btn-theme btn-circle" target="_blank"
                                style="margin-top: 10px;">Check Our Packages</a>
                         </div>
