--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -42,12 +42,7 @@
                         {% endif %}
                         <p class="lead mb-4 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s"
                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
-                            We Help Businesses Acquire Business Credit With Our Free Software, Mobile App, & Google
-                            Chrome Extension. Also,
-                            We Have A Free Personal Credit, Marketing, & Business Credit Course In Our Software As Well.
-                            Get $1,500 In Free Marketing, & Only
-                            Pay For Real Services Only When You Need It & Would Like To Upgrade & Purchase Our Business
-                            Credit Builder Package. </p>
+                            {{dynamic.frontpage_text}}</p>
                         <a class="btn btn-theme wow fadeInUp" data-wow-duration="3s" data-wow-delay="0.5s"
                            href="https://www.youtube.com/watch?v=xNCfnbGT5hY&t=726s" target="_blank"
                            data-text="Watch Our Webinar"
