--- a/getdinerotoday/templates/landingpages/layout/LandingLayout.html
+++ b/getdinerotoday/templates/landingpages/layout/LandingLayout.html
@@ -2,33 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="{% if dynamic.is_main_site %}
-            {{ dynamic.title }}
-        {% else %}
-            Get Dinero Today
-        {% endif %}"/>
-    <meta name="description" content="{% if dynamic.is_main_site %}
-            {{ dynamic.title }}
-        {% else %}
-            Get Dinero Today
-        {% endif %}"/>
+    <meta name="keywords" content="{{ dynamic.seo_description }}"/>
+    <meta name="description" content="{{ dynamic.seo_description }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-
-
-    <title>
-        {% if dynamic.is_main_site %}
-            {{ dynamic.title }}
-        {% else %}
-            Get Dinero Today
-        {% endif %}
-    </title>
+    <title>{{ dynamic.favicon_title }}</title>
     {% include "landingpages/components/StylesBlock.html" %}
     {% block extrastyle %}
     {% endblock extrastyle %}
-
 </head>
 <body class="home-4">
 
