--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -43,7 +43,7 @@
 
         </style>
         <br>
-        <b><h2 style="text-align:center;">Make Extra Money Today By Joining Our Affiliate Program <br> Or White Label Partner Program. (Both Are Free To Join)</h2></b>
+        <b><h2 style="text-align:center;">Make Extra Money Today By {% if dynamic.show_affiliate %}Joining Our Affiliate Program Or {% endif %}<br> White Label Partner Program.{% if dynamic.show_affiliate %} (Both Are Free To Join){% endif %}</h2></b>
         <br><br>
         <div class="row">
             {% if dynamic.show_affiliate %}
