--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -293,20 +293,20 @@
                                 0% Business Credit Card
                                 Strategy </a>
                         </li>
-                    {% if dynamic.is_main_site %}
+                    {% if dynamic.is_paid_for_whitelabel %}
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money
                                 Referring Friends! </a>
                         </li>
                     {% endif %}
-                        {% if dynamic.is_main_site and dynamic.show_affiliate %}
+                        {% if dynamic.show_affiliate %}
                             <li class="nav-item">
                                 <a href="{{ dynamic.affiliate_link }}" target="_blank" class="nav-link">Go To
                                     Affiliate Agent
                                     Portal</a>
                             </li>
                         {% endif %}
-                        {% if dynamic.is_main_site %}
+                        {% if dynamic.is_paid_for_whitelabel %}
                             <li class="nav-item">
                                 <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link"> Go To
                                     White Label Partner Portal</a>
