--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -5,8 +5,8 @@
                 <div class="col-lg-12">
                     <style media="screen">
                         .navbar-toggler {
-                            background-color: #115d22;
-                            color: #115d22;
+                            background-color: {{ dynamic.primary_color }};
+                            color: {{ dynamic.primary_color }};
                         }
 
                         .my-ifram-in-mobile {
