--- a/getdinerotoday/templates/landingpages/components/StylesBlock.html
+++ b/getdinerotoday/templates/landingpages/components/StylesBlock.html
@@ -12,6 +12,28 @@
 <link href="/static/css/responsive.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+
+
+<style>
+    .title-effect-2 .ellipse {
+        background: {{ dynamic.primary_color }} !important;
+    }
+
+    .video-btn .play-btn {
+        background: {{ dynamic.primary_color }} !important;
+    }
+
+    .spinner-eff .circle-1 {
+        background: {{ dynamic.primary_color }} !important;
+    }
+
+        .spinner-eff .circle-2 {
+        background: {{ dynamic.primary_color }} !important;
+    }
+
+</style>
+
+
 <!--Start of Tawk.to Script-->
 <script>
     (function (h, o, t, j, a, r) {
