--- a/user/templates/forgotpassword.html
+++ b/user/templates/forgotpassword.html
@@ -1,5 +1,12 @@
 {% extends "userBase.html" %}
 {% load i18n %}
+{% block extrastyle %}
+    <style>
+    .misc-box{
+        background-color: {{ dynamic.login_window_color }};
+    }
+    </style>
+{% endblock %}
 {% block content %}
     <form class="new_user" id="new_user" method="post" accept-charset="UTF-8">{% csrf_token %}
         {{ form.as_p }}
