--- a/user/templates/registration.html
+++ b/user/templates/registration.html
@@ -1,6 +1,12 @@
 {% extends "userBase.html" %}
 {% block extrastyle %}
 
+    <style>
+    .misc-box{
+        background-color: {{ dynamic.login_window_color }};
+    }
+    </style>
+
 <style type="text/css">
 
         .group {
