--- a/user/templates/resetPassword.html
+++ b/user/templates/resetPassword.html
@@ -1,4 +1,13 @@
 {% extends "userBase.html" %}
+{% block extrastyle %}
+    <style>
+    .misc-box{
+        background-color: {{ dynamic.login_window_color }};
+    }
+    </style>
+{% endblock %}
+
+
 {% block content %}
 
     <form class="new_user" id="new_user" accept-charset="UTF-8" method="post">{% csrf_token %}
