--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,5 +1,11 @@
 {% extends "userBase.html" %}
-
+{% block extrastyle %}
+    <style>
+    .misc-box{
+        background-color: {{ dynamic.login_window_color }};
+    }
+    </style>
+{% endblock %}
 {% block content %}
     {% if error %}
 
