--- a/user/templates/password-reset-email-sent.html
+++ b/user/templates/password-reset-email-sent.html
@@ -1,5 +1,12 @@
 {% extends "userBase.html" %}
 {% load i18n %}
+{% block extrastyle %}
+    <style>
+    .misc-box{
+        background-color: {{ dynamic.login_window_color }};
+    }
+    </style>
+{% endblock %}
 {% block content %}
     <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You
         should receive them shortly.</p>
