--- a/business/templates/life_events/financial_products.html
+++ b/business/templates/life_events/financial_products.html
@@ -29,7 +29,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-default">
-                        Lenders You Qualify For
+                        See The Beat Financing Options You Qualify For In This Situation
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -379,7 +379,7 @@
         <div class="row justify-content-center mb-5">
             <div>
                 <h1>
-                    Become a White Label Partner
+                    Become A White Label Partner
                 </h1>
 
             </div>
