--- a/business/templates/life_events/lifeevents.html
+++ b/business/templates/life_events/lifeevents.html
@@ -29,7 +29,7 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <div class="card-header">Need Extra Money Holiday Shopping?</div>
+                    <div class="card-header">Need Extra Money For Holiday Shopping?</div>
                     <img src="https://images.pexels.com/photos/919436/pexels-photo-919436.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
