--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -151,6 +151,10 @@
                                 Building Steps You Need Done For You </a>
                         </li>
                         <li class="nav-item">
+                            <a href="/{{ request.resolver_match.app_name }}/business-credit-steps-guided"
+                               class="nav-link"> Guided Business Creation</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
                                     class="toggle-none"> Business Credit Bureaus To Become Established With  <span
                                     class="fa arrow"></span></span></a>
