--- a/business/templates/life_events/financial_products.html
+++ b/business/templates/life_events/financial_products.html
@@ -29,7 +29,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-default">
-                        See The Beat Financing Options You Qualify For In This Situation
+                        See The Best Financing Options You Qualify For In This Situation
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
