--- a/business/templates/businessCreditBuilding/steps/guidedCreation.html
+++ b/business/templates/businessCreditBuilding/steps/guidedCreation.html
@@ -431,7 +431,7 @@
                                 form.appendChild(input);
                             }
 
-                            if (item.name && item.choice) {
+                            if (item.name && item.choice === 3) {
                                 input = document.createElement('input');
                                 input.name = item.name;
                                 input.value = 'on';
