--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -38,7 +38,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <img src='{% static "images/avtar-2.png" %}' class="rounded-circle" width="30">
                         </a>
-                        <ul class="dropdown-menu top-dropdown">
+                        <ul class="dropdown-menu top-dropdown" style="width: 250px">
                             {% if request.user.is_authenticated %}
                                 <div style="height: 5px"></div>
                                 <li>
@@ -56,6 +56,10 @@
                                 <li class="dropdown-divider"></li>
                                 <li>
                                     <a href="{% url 'business:create_specific_portal' %}"><i class="icon-briefcase"></i>Saved Portals</a>
+                                </li>
+                                <li class="dropdown-divider"></li>
+                                <li>
+                                    <a href="{% url 'business:guided-creation-progress' %}"><i class="icon-briefcase"></i>Guided Creation Progress</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
 
