--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -50,16 +50,23 @@
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
+                                    <a href="{% url 'business:business-credit-builder-tracker' %}"><i
+                                            class="icon-bell"></i>Business Credit Tracker</a>
+                                </li>
+                                <li class="dropdown-divider"></li>
+                                <li>
                                     <a href="{% url 'loanportal:loanapplication' %}"><i class="icon-credit-card"></i>Loan
                                         Portal</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
-                                    <a href="{% url 'business:create_specific_portal' %}"><i class="icon-briefcase"></i>Saved Portals</a>
+                                    <a href="{% url 'business:create_specific_portal' %}"><i class="icon-briefcase"></i>Saved
+                                        Portals</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
-                                    <a href="{% url 'business:guided-creation-progress' %}"><i class="icon-briefcase"></i>Guided Creation Progress</a>
+                                    <a href="{% url 'business:guided-creation-progress' %}"><i
+                                            class="icon-briefcase"></i>Guided Creation Progress</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
 
