--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -367,6 +367,9 @@
                         <li class="nav-item">
                             <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
                                     class="toggle-none">Live Chat</span></a>
+                        </li>                        <li class="nav-item">
+                            <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank" class="nav-link"><span
+                                    class="toggle-none">Your AI Customer Success Agent</span></a>
                         </li>
 
                         <br><br><br>
