--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -247,11 +247,11 @@
                             </thead>
                             {% for tradeline in tradelines %}
                                 <tr class="bg-white">
-                                    <td>{{ tradeline.name }}</td>
-                                    <td>{{ tradeline.product }}</td>
-                                    <td>{{ tradeline.amount }}</td>
-                                    <td>{{ tradeline.price }}$</td>
-                                    <td>{{ tradeline.charge }}$</td>
+                                    <td>{{ tradeline.tradeline.company_name }}</td>
+                                    <td>{{ tradeline.tradeline.product }}</td>
+                                    <td>{{ tradeline.tradeline.tradeline_amount }}</td>
+                                    <td>{{ tradeline.tradeline.price }}$</td>
+                                    <td>{{ tradeline.tradeline.charge }}$</td>
                                 </tr>
                             {% endfor %}
                         </table>
