--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -50,6 +50,10 @@
                         {#                        with No Money Down</a>#}
                         {#                </li>#}
                         <li class="nav-item">
+                            <a href="{% url 'business:business-credit-builder-tracker' %}"
+                               class="nav-link"> Business Credit Builder Tracker </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="{% url 'business:tradelines' %}"
                                class="nav-link"> Add Business Tradelines </a>
                         </li>
