--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -138,6 +138,10 @@
                         <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:becomingapartner' %}"
                                                 class="nav-link">Becoming A White Label Partner</a></li>
                     {% endif %}
+
+                       <li class="nav-item"><a href="{% url "whitelabelpartnerportal:wholesales" %}" class="nav-link">Wholesale Packages</a></li>
+                       <li class="nav-item"><a href="" class="nav-link">Clients That Are On Your Wholesale Package</a></li>
+                       <li class="nav-item"><a href="" class="nav-link">Partner Resources</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:marketingroi' %}" class="nav-link">Your
                         Marketing Return On Investment</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:whitelabeltraining' %}"
