--- a/financing_portal/templates/FinancingPortalHomePage.html
+++ b/financing_portal/templates/FinancingPortalHomePage.html
@@ -12,14 +12,15 @@
     <section class="main-content">
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-header card-default">
                         Account Overview
                     </div>
                     <div class="card-body">
-                        Available Credit Limit For Our Products
-                        <div>$1500</div>
+                        <p>Available Credit Limit For Our Products: ${{ profile.available_credit_limit }}</p>
+                        <p>Credit Line: ${{ profile.credit_line }}</p>
+
                     </div>
                 </div>
             </div>
@@ -27,14 +28,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header card-default">
-                        Credit Line
-                    </div>
+
                     <div class="card-body">
-                        <div>$10000</div>
+                        <a class="btn btn-primary" href="{% url "financing_portal:purchase-products" %}">Purchase
+                            Products</a>
+
                     </div>
                 </div>
             </div>
+
 
             <div class="col-md-6">
                 <div class="card">
@@ -45,18 +47,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-
-                    <div class="card-body">
-                        <a class="btn btn-primary" href="{% url "financing_portal:purchase-products" %}">Purchase Products</a>
-
-                    </div>
-                </div>
-            </div>
-
-        </div>
 
     </section>
 {% endblock %}
