--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -54,6 +54,10 @@
                                class="nav-link"> Business Credit Builder Tracker </a>
                         </li>
                         <li class="nav-item">
+                            <a href="{% url 'business:business_credibility_checklist' %}"
+                               class="nav-link"> Business Credibility Checklist </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="{% url 'financing_portal:financing-portal-home' %}"
                                class="nav-link"> Financing Products Portal </a>
                         </li>
