--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -69,6 +69,11 @@
                                             class="icon-briefcase"></i>Guided Creation Progress</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
+                                <li>
+                                    <a href="{% url 'business:business_credibility_checklist' %}"><i
+                                            class="icon-briefcase"></i>Business Credit Checklist</a>
+                                </li>
+                                <li class="dropdown-divider"></li>
 
                                 {% if on_payment_plan %}
                                     <li>
